# clang_format_autoversion

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_llvm.cmake  clang_format_av.cpp  cmake-format.yaml  os_helpers.hpp  os_helpers_windows.cpp  patch.xml  setup-apt.sh  vcpkg.json
.github/workflows/: build.yml
cmake/: toolchain_arm64.cmake  toolchain_arm64_ubuntu18.cmake
llvm_versions/: llvm_13.cmake  llvm_14.cmake  llvm_15.cmake
pkg/: CMakeLists.txt  extra.wxs
src/: CMakeLists.txt  clang_format_av.cpp  detect_version.cpp  detect_version.hpp  os_helpers_linux.cpp  os_helpers_windows.cpp
src/libclang_format_av/: CMakeLists.txt  clang_format_version_detector.cpp  clang_format_version_detector.hpp  detect_clang_format_version.cpp  detect_clang_format_version.hpp  detect_version.cpp  detect_version_from_comments.cpp  detect_version_from_yaml.cpp
src/libclang_format_av/include/: detect_clang_format_version.hpp  detect_version.hpp  detect_version_from_comments.hpp  detect_version_from_yaml.hpp  svtoi.hpp
src/libclang_format_av_test/: CMakeLists.txt  clang_format_version_detector_test.cpp  detect_clang_format_version_test.cpp  detect_version_test.cpp  dump_config_13.cpp  dump_configs.hpp
test/: CMakeLists.txt  detect_version_test.cpp  test_deb.sh  test_msi.bat
test/example_13/: .clang-format
test/example_14/: .clang-format
test/example_15/: .clang-format
